Thu Apr 16 22:15:00 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/dsto:

          . Sandbox for the DSTO work.

Thu Apr 16 18:41:55 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_ciao_stub.mpb:
        * cuts/BDC/Benchmark_Data_Collector.mpc:

          . Fixed build errors on non-Windows systems.

Thu Apr 16 17:23:54 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Worker.h:
        * cuts/Worker.inl:
        * cuts/utils/calibrate/Calibrate_App.cpp:
        * cuts/utils/calibrate/Calibrate_Options.h:
        * cuts/workers/CPU/CPU_Worker_T.h:
        * cuts/workers/CPU/CPU_Worker_T.cpp:

          . Added support for sending command-line arguments to the
            calibration.

Thu Apr 16 17:09:43 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/calibrate/Calibrate_App.h:
        * cuts/utils/calibrate/Calibrate_App.cpp:

          . Added --help command-line option.

Thu Apr 16 17:00:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/calibrate/Calibrate_App.h:
        * cuts/utils/calibrate/Calibrate_App.inl:
        * cuts/utils/calibrate/Calibrate_App.cpp:
        * cuts/utils/calibrate/Calibrate_Options.h:
        * cuts/utils/calibrate/calibrate.cpp:
        * cuts/utils/calibrate/calibrate.mpc:

          . Re-designed the application so that uses a C++ application
            object instead of C functions.

Wed Apr 15 06:18:21 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/models/CAPI.xme:
        * MDE/GME/paradigms/PICML/models/XMLSchema.xme:
        * MDE/GME/paradigms/PICML/models/examples/capi/AnyEvent.xme:

          . Upgraded models to latest version of PICML.

        * install/CUTS_CoSMIC.wxs:
        * install/CUTS_CoSMIC_installers.mpc:
        * install/CUTS_PICML.wxs:

          . Included example models in installer.
