@@ -1,3 +1,12 @@
+Thu Apr 16 23:11:58 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/arch/capi/cuts/jbi/utils/ConnectionString.java:
+        * cuts/arch/capi/cuts/jbi/utils/RegisterMioType.java:
+        * cuts/arch/capi/cuts/jbi/utils/UserCredentials.java:
+
+          . Bug fix where the packages where inconsistent with the
+            directory structure.
+
 Thu Apr 16 22:15:00 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/arch/dsto:
